--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1381,23 +1381,23 @@ body {
     flex: auto!important;
   }
 }
-.cid-rdFXcgdNu6 {
+.cid-rBGlLO6eLV {
   padding-top: 45px;
   padding-bottom: 45px;
   background-image: url("../../../assets/images/background-black-blackboard-159770-2000x1333.jpg");
 }
 @media (min-width: 992px) {
-  .cid-rdFXcgdNu6 .mbr-figure {
+  .cid-rBGlLO6eLV .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rdFXcgdNu6 .mbr-figure {
+  .cid-rBGlLO6eLV .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rdFXcgdNu6 .mbr-text {
+  .cid-rBGlLO6eLV .mbr-text {
     text-align: center;
   }
 }
@@ -1673,163 +1673,60 @@ body {
     width: 100% !important;
   }
 }
-.cid-rAbpFcKk4j {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #072116;
+.cid-rBGlU1bHJQ {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #072116, #000000);
 }
-.cid-rAbpFcKk4j .mbr-section-btn > * {
-  margin: 0;
+.cid-rBGlU1bHJQ .list-group-item {
+  padding: .75rem 3.25rem;
 }
-.cid-rAbpFcKk4j h4 {
-  font-weight: 500;
-}
-.cid-rAbpFcKk4j p {
-  color: #232323;
-}
-.cid-rAbpFcKk4j .aside-content {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.cid-rAbpFcKk4j .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
+.cid-rBGlU1bHJQ .plan {
   word-break: break-word;
-}
-.cid-rAbpFcKk4j .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rAbpFcKk4j .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rAbpFcKk4j .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rAbpFcKk4j .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rAbpFcKk4j .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-rAbpFcKk4j .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rAbpFcKk4j .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rAbpFcKk4j .cost {
-  text-decoration: line-through;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
   color: #767676;
 }
-.cid-rAbpFcKk4j .text2 SPAN {
-  color: #cc2952;
+.cid-rBGlU1bHJQ .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  border: 0;
 }
-.cid-rAbpFcKk4j H2 {
-  color: #ffffff;
+.cid-rBGlU1bHJQ .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
 }
-.cid-rAbpFcKk4j .text1 {
-  color: #ffffff;
+.cid-rBGlU1bHJQ .plan .list-group-item:last-child::after {
+  display: none;
 }
-.cid-rAbpFcKk4j .text2 {
-  color: #ffffff;
+.cid-rBGlU1bHJQ .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.cid-rAbpGApctk {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #072116;
+.cid-rBGlU1bHJQ .plan-header,
+.cid-rBGlU1bHJQ .plan-body {
+  background-color: #fff;
 }
-.cid-rAbpGApctk .mbr-section-btn > * {
-  margin: 0;
-}
-.cid-rAbpGApctk h4 {
-  font-weight: 500;
-}
-.cid-rAbpGApctk p {
+.cid-rBGlU1bHJQ .price-figure {
+  font-weight: 700;
   color: #232323;
 }
-.cid-rAbpGApctk .aside-content {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.cid-rBGlU1bHJQ .price-value {
+  font-weight: 700;
+  vertical-align: top;
 }
-.cid-rAbpGApctk .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  word-break: break-word;
-}
-.cid-rAbpGApctk .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rAbpGApctk .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rAbpGApctk .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rAbpGApctk .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rAbpGApctk .mbr-figure {
-    padding-right: 4rem;
+@media (max-width: 550px) {
+  .cid-rBGlU1bHJQ .price-figure {
+    font-size: 4.25rem;
   }
-}
-@media (max-width: 991px) {
-  .cid-rAbpGApctk .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rAbpGApctk .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rAbpGApctk .cost {
-  text-decoration: line-through;
-  color: #767676;
-}
-.cid-rAbpGApctk .text2 SPAN {
-  color: #cc2952;
-}
-.cid-rAbpGApctk .text2 {
-  color: #ffffff;
-}
-.cid-rAbpGApctk .text1 {
-  color: #ffffff;
-}
-.cid-rAbpGApctk H2 {
-  color: #ffffff;
 }
 .cid-r5QJ6G2YyD {
   padding-top: 60px;
