--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6609,3 +6609,789 @@ body {
 .cid-rBkOcmPVW4 .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rDjcNNXfUS .navbar {
+  padding: .5rem 0;
+  background: #000000;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rDjcNNXfUS .navbar-dropdown.bg-color.transparent.opened {
+  background: #000000;
+}
+.cid-rDjcNNXfUS a {
+  font-style: normal;
+}
+.cid-rDjcNNXfUS .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rDjcNNXfUS .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rDjcNNXfUS .nav-item:focus,
+.cid-rDjcNNXfUS .nav-link:focus {
+  outline: none;
+}
+.cid-rDjcNNXfUS .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rDjcNNXfUS .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rDjcNNXfUS .menu-logo {
+  margin-right: auto;
+}
+.cid-rDjcNNXfUS .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rDjcNNXfUS .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rDjcNNXfUS .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rDjcNNXfUS .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rDjcNNXfUS .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-rDjcNNXfUS .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rDjcNNXfUS .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rDjcNNXfUS .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rDjcNNXfUS .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rDjcNNXfUS .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rDjcNNXfUS .dropdown .dropdown-menu {
+  background: #000000;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rDjcNNXfUS .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rDjcNNXfUS .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rDjcNNXfUS .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rDjcNNXfUS .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rDjcNNXfUS .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rDjcNNXfUS .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rDjcNNXfUS .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rDjcNNXfUS .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rDjcNNXfUS .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rDjcNNXfUS .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rDjcNNXfUS .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rDjcNNXfUS button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rDjcNNXfUS button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rDjcNNXfUS button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rDjcNNXfUS button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rDjcNNXfUS button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rDjcNNXfUS button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rDjcNNXfUS button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rDjcNNXfUS nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rDjcNNXfUS nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rDjcNNXfUS nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rDjcNNXfUS nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rDjcNNXfUS .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rDjcNNXfUS .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.collapsing,
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rDjcNNXfUS .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rDjcNNXfUS .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rDjcNNXfUS .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rDjcNNXfUS .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rDjcNNXfUS .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rDjcNNXfUS .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rDjcNNXfUS .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rDjcNNXfUS .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rDjcNNXfUS img {
+    height: 3.8rem !important;
+  }
+  .cid-rDjcNNXfUS .btn {
+    display: -webkit-flex;
+  }
+  .cid-rDjcNNXfUS button.navbar-toggler {
+    display: block;
+  }
+  .cid-rDjcNNXfUS .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rDjcNNXfUS .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse.collapsing,
+  .cid-rDjcNNXfUS .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse.collapsing .navbar-nav,
+  .cid-rDjcNNXfUS .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rDjcNNXfUS .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rDjcNNXfUS .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rDjcNNXfUS .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rDjcNNXfUS .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rDjcNNXfUS .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rDjcNNXfUS .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rDjcNNXfUS .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rDjcNNXfUS .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rDjcNNXfUS .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rDjcNNXfUS .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rDjcNNXfUS .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rDjcNNXfUS .nav-link:hover,
+.cid-rDjcNNXfUS .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rDjcNPfXMA {
+  padding-top: 75px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/fondo-pizarra-1500x831.png");
+}
+@media (min-width: 992px) {
+  .cid-rDjcNPfXMA .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rDjcNPfXMA .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rDjcNPfXMA .mbr-text {
+    text-align: center;
+  }
+}
+.cid-rDjcNQTqRj {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rDjcNQTqRj .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rDjcNQTqRj H2 {
+  text-align: left;
+}
+.cid-rDjcNQTqRj .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-rDjcNRVbms {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #efefef;
+}
+.cid-rDjcNRVbms .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rDjcNTmL2m {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rDjcNTmL2m .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rDjcNTmL2m .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rDjcNTmL2m .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rDjcNTmL2m .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rDjcNTmL2m .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rDjcNTmL2m .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rDjcNTmL2m .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rDjcNTmL2m .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rDjcNTmL2m .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rDjcNVFsXQ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rDjcNVFsXQ .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rDjcNVFsXQ H2 {
+  text-align: left;
+}
+.cid-rDjcNVFsXQ .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-rDjcNXx5VY {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #072116;
+}
+.cid-rDjcNXx5VY .mbr-section-subtitle {
+  color: #ffffff;
+  font-weight: 300;
+}
+.cid-rDjcNXx5VY .mbr-content-text {
+  color: #ffffff;
+  margin-bottom: 0;
+}
+.cid-rDjcNXx5VY .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-rDjcNXx5VY .img-text {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  border: 2px solid #efefef;
+  border-radius: 50%;
+}
+@media (max-width: 991px) {
+  .cid-rDjcNXx5VY .img-text {
+    width: 48px;
+    height: 48px;
+    font-size: 24px;
+  }
+}
+@media (min-width: 992px) {
+  .cid-rDjcNXx5VY .cards-block {
+    border-top: 2px solid #efefef;
+  }
+}
+.cid-rDjcNXx5VY .cards-block .card {
+  border-bottom: 2px solid #efefef;
+  border-radius: 0;
+}
+.cid-rDjcNXx5VY .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+@media (max-width: 767px) {
+  .cid-rDjcNXx5VY .panel-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cid-rDjcNXx5VY .panel-item .card-img {
+    padding: 0;
+    padding-bottom: 1rem;
+  }
+}
+.cid-rDjcNXx5VY .mbr-section-title {
+  color: #ffffff;
+}
+.cid-rDjcNXx5VY H4 {
+  color: #ffffff;
+}
+.cid-rDjcNXx5VY .img-text {
+  color: #ffffff;
+}
+.cid-rDAn52m6xe {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rDAn52m6xe .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rDAn52m6xe .section-text {
+  padding: 2rem 0;
+}
+.cid-rDAn52m6xe .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rDAn52m6xe .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rDjcNZDWwb {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #241e1e;
+}
+@media (min-width: 992px) {
+  .cid-rDjcNZDWwb .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rDjcNZDWwb .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rDjcNZDWwb .mbr-text {
+    text-align: center;
+  }
+}
+.cid-rDjcO1vB9f {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rDjcO1vB9f .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rDjcO1vB9f .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rDAlFOstxH {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+.cid-rDAlFOstxH .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-rDAlFOstxH .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-rDAlFOstxH .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  border: 0;
+}
+.cid-rDAlFOstxH .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-rDAlFOstxH .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-rDAlFOstxH .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-rDAlFOstxH .plan-header,
+.cid-rDAlFOstxH .plan-body {
+  background-color: #fff;
+}
+.cid-rDAlFOstxH .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-rDAlFOstxH .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-rDAlFOstxH .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-rDjcO39dal {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rDjcO39dal h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rDjcO39dal p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rDjcO39dal .card-box {
+  padding-top: 2rem;
+}
+.cid-rDjcO39dal .card-wrapper {
+  height: 100%;
+}
+.cid-rDjcO58HLW {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rDjcO58HLW .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rDjcO58HLW .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rDjcO58HLW .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rDjcO58HLW .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rDjcO58HLW .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rDjcO58HLW .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rDjcO58HLW .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rDjcO58HLW .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rDjcO58HLW .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rDjcO58HLW .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rDjcO58HLW .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rDjcO58HLW .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-rDjcO58HLW .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rDjcO58HLW .media-container-row .row-copirayt p {
+  width: 100%;
+}
