--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1381,23 +1381,23 @@ body {
     flex: auto!important;
   }
 }
-.cid-rDj2x38MFW {
+.cid-rGc9KXgnyY {
   padding-top: 45px;
   padding-bottom: 45px;
   background-image: url("../../../assets/images/background-black-blackboard-159770-2000x1333.jpg");
 }
 @media (min-width: 992px) {
-  .cid-rDj2x38MFW .mbr-figure {
+  .cid-rGc9KXgnyY .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rDj2x38MFW .mbr-figure {
+  .cid-rGc9KXgnyY .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rDj2x38MFW .mbr-text {
+  .cid-rGc9KXgnyY .mbr-text {
     text-align: center;
   }
 }
@@ -1673,60 +1673,163 @@ body {
     width: 100% !important;
   }
 }
-.cid-rEB6hSUh4G {
-  padding-top: 45px;
-  padding-bottom: 90px;
-  background: linear-gradient(45deg, #072116, #000000);
+.cid-rGc6Phjsud {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #072116;
 }
-.cid-rEB6hSUh4G .list-group-item {
-  padding: .75rem 3.25rem;
+.cid-rGc6Phjsud .mbr-section-btn > * {
+  margin: 0;
 }
-.cid-rEB6hSUh4G .plan {
-  word-break: break-word;
-  position: relative;
-  max-width: 300px;
-  padding-right: 0;
-  padding-left: 0;
-  color: #767676;
+.cid-rGc6Phjsud h4 {
+  font-weight: 500;
 }
-.cid-rEB6hSUh4G .plan .list-group-item {
-  position: relative;
-  -webkit-justify-content: center;
-  justify-content: center;
-  border: 0;
-}
-.cid-rEB6hSUh4G .plan .list-group-item::after {
-  position: absolute;
-  bottom: 0;
-  left: 20%;
-  width: 60%;
-  height: 2px;
-  content: "";
-  background-color: #eaeaea;
-}
-.cid-rEB6hSUh4G .plan .list-group-item:last-child::after {
-  display: none;
-}
-.cid-rEB6hSUh4G .plan-header {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-rEB6hSUh4G .plan-header,
-.cid-rEB6hSUh4G .plan-body {
-  background-color: #fff;
-}
-.cid-rEB6hSUh4G .price-figure {
-  font-weight: 700;
+.cid-rGc6Phjsud p {
   color: #232323;
 }
-.cid-rEB6hSUh4G .price-value {
-  font-weight: 700;
-  vertical-align: top;
+.cid-rGc6Phjsud .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-@media (max-width: 550px) {
-  .cid-rEB6hSUh4G .price-figure {
-    font-size: 4.25rem;
+.cid-rGc6Phjsud .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rGc6Phjsud .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rGc6Phjsud .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rGc6Phjsud .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rGc6Phjsud .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rGc6Phjsud .mbr-figure {
+    padding-right: 4rem;
   }
+}
+@media (max-width: 991px) {
+  .cid-rGc6Phjsud .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rGc6Phjsud .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rGc6Phjsud .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
+.cid-rGc6Phjsud .text2 SPAN {
+  color: #cc2952;
+}
+.cid-rGc6Phjsud H2 {
+  color: #ffffff;
+}
+.cid-rGc6Phjsud .text1 {
+  color: #ffffff;
+}
+.cid-rGc6Phjsud .text2 {
+  color: #ffffff;
+}
+.cid-rGc6QrKLFT {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #072116;
+}
+.cid-rGc6QrKLFT .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-rGc6QrKLFT h4 {
+  font-weight: 500;
+}
+.cid-rGc6QrKLFT p {
+  color: #232323;
+}
+.cid-rGc6QrKLFT .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-rGc6QrKLFT .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rGc6QrKLFT .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rGc6QrKLFT .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rGc6QrKLFT .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rGc6QrKLFT .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rGc6QrKLFT .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rGc6QrKLFT .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rGc6QrKLFT .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rGc6QrKLFT .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
+.cid-rGc6QrKLFT .text2 SPAN {
+  color: #cc2952;
+}
+.cid-rGc6QrKLFT .text2 {
+  color: #ffffff;
+}
+.cid-rGc6QrKLFT .text1 {
+  color: #ffffff;
+}
+.cid-rGc6QrKLFT H2 {
+  color: #ffffff;
 }
 .cid-r5QJ6G2YyD {
   padding-top: 60px;
